--- a/index.html
+++ b/index.html
@@ -4,90 +4,14 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
+		<link rel="stylesheet" href="main.css">
     <title>Das Labor ist .sexy</title>
   </head>
 	<body>
-		<style>
-			body {
-				margin: 0;
-				background: #000;
-				overflow: hidden;
-			}
-
-			.overlay {
-				position: absolute;
-				right:0;
-				top:0;
-				background: rgba(0,0,0,.5);
-				padding: 10px;
-				border-radius: 8px;
-				color: #eaeaea;
-				font-size: 18pt;
-				line-height: 1.3333em;
-				margin: 4%;
-			}
-
-			.overlay em {
-				font-size: 120%;
-				font-weight: bold;
-				font-style: normal;
-			}
-
-			.wrapper {
-				position: absolute;
-				width: 100%;
- 				transition: 1s ease-in-out;
-			}
-
-			img {
-				height: auto;
-				width: 100%;
-				display: block;
-			}
-
-			#ov1 {
-				width: 500px;
-			}
-
-			#ov2 {
-				left: 6%;
-				right: auto;
-				top: 6%;
-				width: 600px;
-			}
-
-			#ov5 {
-				left: calc(50% - 200px - 10px);
-				top: 30%;
-				width: 400px;
-			}
-
-			#slideshow {
-				position: absolute;
-				width: 100%;
-			}
-
-			#slide1 { top:0; left:0; }
-			#slide2 { top:0; left:0; }
-			#slide3 { top:0; left:0; }
-			#slide4 { top:0; left:0; }
-			#slide5 { top:0; left:0; }
-
-			#slide1:target,
-			#slide2:target + #slide1, #slide2:target,
-			#slide3:target + #slide2 + #slide1, #slide3:target + #slide2, #slide3:target,
-			#slide4:target + #slide3 + #slide2 + #slide1, #slide4:target + #slide3 + #slide2, #slide4:target + #slide3, #slide4:target {
-				transform: translateX(-100%);
-				-webkit-transform: translateX(-100%);
-				-ms-transform: translateX(-100%);
-			}
-		</style>
-
 		<div id="slideshow">
 			<div id="slide5" class="wrapper">
 				<a href="https://das-labor.org/"><div class="image"><img src="images/du.jpg" /></div></a>
-				<div class="overlay" id="ov5">Zwischen den Haltestellen Bochumer Verein / Jahrhunderthalle, Annastraße und Bochum West befindet sich das neue Labor, westlich der Bochumer Innenstadt -- in der <em>Alleestraße 50</em> neben der Sparkasse im Hof.</div>
+				<div class="overlay" id="ov5">Zwischen den Haltestellen Bochumer Verein / Jahrhunderthalle, Annastraße und Bochum West befindet sich das Labor, westlich der Bochumer Innenstadt -- in der <em>Alleestraße 50</em> neben der Sparkasse im Hof.</div>
 			</div>
 
 			<div id="slide4" class="wrapper">
@@ -102,12 +26,12 @@
 
 			<div id="slide2" class="wrapper">
 				<a href="#slide2"><div class="image"><img src="images/laser.jpg" /></div></a>
-				<div class="overlay" id="ov2">Bei diesem Projekt möchten wir einen <em>Schneidlaser</em> bauen, der stark genug ist, um Material zu schneiden oder Oberflächen zu gravieren. Die Leistung hängt maßgeblich vom eingesetzten Laser ab. Der finale Aufbau soll ähnlich einem X/Y-Plotter aufgebaut werden. Statt des Stifts wird der Laserstrahl auf das Material gelenkt. Haupteinsatzgebiet dürfte dann das direkte Erstellen von PCBs aus unbeschichteten Platten sein.</div>
+				<div class="overlay" id="ov2">Bei diesem Projekt möchten wir einen <a href="https://das-labor.org/wiki/Lasercutter" class="hilight">Schneidlaser</a> bauen, der stark genug ist, um Material zu schneiden oder Oberflächen zu gravieren. Die Leistung hängt maßgeblich vom eingesetzten Laser ab. Der finale Aufbau soll ähnlich einem X/Y-Plotter aufgebaut werden. Statt des Stifts wird der Laserstrahl auf das Material gelenkt. Haupteinsatzgebiet dürfte dann das direkte Erstellen von PCBs aus unbeschichteten Platten sein.</div>
 			</div>
 
 			<div id="slide1" class="wrapper">
 				<a href="#slide1"><div class="image"><img src="images/borg.jpg" /></div></a>
-				<div class="overlay" id="ov1">Der <em>Borg16</em> ist eine auf Andres originalem 16x16 Borg basierende, professionell hergestellte Platine zur Ansteuerung von 256 Leds. Üblicherweise sind diese als eine Matrix von 16x16 Leds angeordnet, aber auch andere Formate sind möglich. Sie bietet eine serielle Schnitstelle und einen Anschluss für bis zu zwei Joysticks im 9-Pin Atari-Standard. Zusätzlich kann ein Canbus-Controller oder RMF12 Funkmodul zur Vernetzung bestückt werden.</div>
+				<div class="overlay" id="ov1">Der <a href="https://www.das-labor.org/wiki/Borg16" class="hilight">Borg16</a> ist eine auf Andres originalem 16x16 Borg basierende, professionell hergestellte Platine zur Ansteuerung von 256 Leds. Üblicherweise sind diese als eine Matrix von 16x16 Leds angeordnet, aber auch andere Formate sind möglich. Sie bietet eine serielle Schnitstelle und einen Anschluss für bis zu zwei Joysticks im 9-Pin Atari-Standard. Zusätzlich kann ein Canbus-Controller oder RMF12 Funkmodul zur Vernetzung bestückt werden.</div>
 			</div>
 		</div>
 	</body>
