--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 			<div id="slide3" class="wrapper">
 				<a href="#slide3"><div class="image"><img src="images/repaircafe.jpg" /></div></a>
-				<div class="overlay" id="ov3"><em>Repaircafe</em></div>
+				<div class="overlay" id="ov3">Das Alsenwohnzimmer und das Labor veranstalten zusammen alle zwei Monate ein <a href="https://das-labor.org/wiki/Repaircafe" class="hilight">Repair Cafe</a>. Dabei bieten wir Helfer an, die bei der Instandsetzung von reparaturbedürftigen Geräten/Kleidung zur Seite stehen. Es gibt pro Reparaturplatz einen erfahrenen Helfer. Repariert wird dabei alles vom Staubsauger über die Nähmaschine bis zur Deckenlampe.</div>
 			</div>
 
 			<div id="slide2" class="wrapper">
